log
ju., 14 de sep. de 2023 16:45:04: 
 tests:  1|8
total_score: 0/70
fc6abcf
ju., 14 de sep. de 2023 16:52:29: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
310374a
ju., 14 de sep. de 2023 17:08:00: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8150ad1
ju., 14 de sep. de 2023 17:09:45: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ce9109f
ju., 14 de sep. de 2023 17:13:15: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:97:13: error: unused variable 'result' [-Werror=unused-variable]
         int result = tree -> lower_than(tree -> current -> pair -> key, key);
             ^~~~~~
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ca1ed12
ju., 14 de sep. de 2023 17:19:12: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:107:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
79bf5a1
ju., 14 de sep. de 2023 17:20:28: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
0f64369
